# MyBot

./: .gitignore  main.py  pyproject.toml  requirements.txt
bot/: ext.py  git.py  server_log.py  sync.py
bot/cogs/: admin.py  counting.py  economy.py  fun.py  join_to_create.py  media_only.py  moderation.py  reddit.py  spotify.py  utility.py  welcomer.py
bot/cogs/fun_ext/: rps.py  ttt.py
bot/cogs/mod_ext/: ReportMessage.py
bot/utils/: mod_helpers.py  moderation_log.py  variablesmo.py
data/: persistent_data.db
