[project]
name = "repl-nix-python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aether>=0.3.37",
    "aiosqlite>=0.20.0",
    "asyncpraw>=7.2.0",
    "deep-translator>=1.11.4",
    "discord-py>=2.4.0",
    "easy-pil>=0.4.0",
    "gpt3discord>=10.8.2",
    "langcodes>=3.4.1",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "sympy>=1.13.3",
]
